compiler/arc/src/serializer/snapshots/arc__serializer__tests__empty_file.snap
---
source: compiler/arc/src/serializer/tests.rs
description: ""
---
ArcfileNoPackages {
    path: "<test>",
}
