compiler/arc/src/serializer/snapshots/arc__serializer__tests__invalid_version_string.snap
---
source: compiler/arc/src/serializer/tests.rs
description: "Package \"sample\" {\n            version = \"1.0.0\"\n            lume_version = \"^1-1\"\n        }"
---
ArcfileInvalidVersion {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "Package \"sample\" {\n            version = \"1.0.0\"\n            lume_version = \"^1-1\"\n        }",
        package: PackageId(
            0,
        ),
    },
    range: 76..82,
    version: "^1-1",
    field: "lume_version",
}
