compiler/arc/src/serializer/snapshots/arc__serializer__tests__prerelease_lume_version_stable.snap
---
source: compiler/arc/src/serializer/tests.rs
expression: parser.parse().unwrap()
---
Manifest {
    path: "",
    name: "sample",
    lume_version: Spanned {
        value: VersionReq {
            comparators: [
                Comparator {
                    op: Caret,
                    major: 1,
                    minor: Some(
                        0,
                    ),
                    patch: Some(
                        0,
                    ),
                    pre: Prerelease("rc3"),
                },
            ],
        },
        span: 76..87,
    },
    version: Spanned {
        value: Version {
            major: 1,
            minor: 0,
            patch: 0,
        },
        span: 41..48,
    },
    description: None,
    license: None,
    repository: None,
    dependencies: ManifestDependencies {
        no_std: false,
        dependencies: [],
    },
}
