compiler/arc/src/serializer/snapshots/arc__serializer__tests__with_unexpected_name_type.snap
---
source: compiler/arc/src/serializer/tests.rs
description: "Package 123 {}"
---
ArcfileUnexpectedType {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "Package 123 {}",
        package: PackageId(
            0,
        ),
    },
    range: 8..11,
    expected: "String",
    found: "Integer",
}
